commit local changes

--- a/apps/nextjs/.env.example
+++ b/apps/nextjs/.env.example
@@ -1,10 +1,9 @@
 # App
-NEXT_PUBLIC_APP_URL=http://localhost:3000
-NODE_ENV=development
+NEXT_PUBLIC_APP_URL=
+NODE_ENV=
 
 # Authentication (NextAuth.js)
-NEXTAUTH_URL=http://localhost:3000
-# https://generate-secret.vercel.app/32
+NEXTAUTH_URL=
 NEXTAUTH_SECRET=
 
 # https://console.cloud.google.com/apis/credentials
@@ -18,11 +17,11 @@ GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
 # https://resend.com/settings/smtp
-EMAIL_SERVER=smtp://username:password@smtp.example.com:587
-EMAIL_FROM=noreply@example.com
+EMAIL_SERVER=
+EMAIL_FROM=
 
 # Database
-DATABASE_URL="postgresql://user:pass@localhost:5432/fdai_test?schema=public"
+DATABASE_URL=
 
 # Get this from https://platform.openai.com/account/api-keys
 OPENAI_API_KEY=
@@ -31,3 +30,4 @@ OPENAI_MODEL=
 # Get your client ID/secret from https://builder.dfda.earth/app/public/#/app/configuration
 DFDA_CLIENT_ID=
 DFDA_CLIENT_SECRET=
+
