--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -14,6 +14,7 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
     "test": "jest --watch",
+    "trigger": "npx @trigger.dev/cli@latest dev",
     "test:ci": "jest --ci",
     "format": "pnpm prettier . --write",
     "format:check": "pnpm prettier . --check",
@@ -21,7 +22,6 @@
     "generate:rapini": "npx rapini react-query -p ../../docs/api-reference/openapi.yml"
   },
   "dependencies": {
-    "ai": "^2.2.26",
     "@copilotkit/backend": "^0.8.0",
     "@copilotkit/react-core": "^0.24.0",
     "@copilotkit/react-ui": "^0.21.0",
@@ -46,9 +46,14 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-table": "^8.11.8",
+    "@trigger.dev/nextjs": "^2.3.18",
+    "@trigger.dev/react": "^2.3.18",
+    "@trigger.dev/sdk": "^2.3.18",
+    "@types/chai": "^4.3.14",
     "@types/mdx": "^2.0.12",
     "@types/node": "20.11.17",
     "@types/react-dom": "18.2.19",
+    "ai": "^2.2.26",
     "autoprefixer": "10.4.17",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
@@ -95,9 +100,9 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
+    "typechat": "^0.0.10",
     "typescript": "5.3.3",
     "typewriter-effect": "^2.20.1",
-    "typechat": "^0.0.10",
     "vaul": "^0.9.0",
     "zod": "^3.22.4",
     "zustand": "^4.3.9"
@@ -119,5 +124,8 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prisma": "^5.9.1",
     "ts-jest": "^29.1.2"
+  },
+  "trigger.dev": {
+    "endpointId": "the-decentralized-fda-1W-N"
   }
 }
